# OpenGL_2DRenderer

./: CMakeLists.txt  README.md  app  build.sh
.cache/clangd/index/: glad.c.DCF4A28C2F6B100B.idx  glad.h.D4EB226D95D92F5A.idx  khrplatform.h.980EA98C3ED847A5.idx  main.cpp.A246FE4C2AA6F7BE.idx  main.h.8B3E232CA28828BB.idx  object.cpp.83A6C8A2955F2A5A.idx  object.h.586FD9F768491680.idx  shader.cpp.6B663339E5744434.idx  shader.h.4682BB207ADB3617.idx  vao.cpp.2E34772FE8D12493.idx  vao.h.189AD1B66BCC6FA8.idx  window.cpp.E826BF4BF9C109F8.idx  window.h.6E9C8174B3D41BE1.idx
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
dependencies/: CMakeLists.txt
dependencies/include/custom/: main.h  object.h  rectangle.h  shader.h  triangle.h  vao.h  window.h
dependencies/include/glad/: glad.h
res/shaders/: fragment.shader
src/: glad.c  main.cpp  object.cpp  rectangle.cpp  shader.cpp  triangle.cpp  vao.cpp  window.cpp
